<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/Margin16"
            android:layout_marginBottom="0dp"
            android:text="@string/form_name"
            android:id="@+id/FormLabelName"/>
        <EditText
            style="@style/Margin16"
            android:hint="@string/form_name"
            android:inputType="textPersonName"
            android:id="@+id/FormInputName"
            android:labelFor="@+id/FormLabelName"
            />
        <TextView
            style="@style/Margin16"
            android:layout_marginBottom="0dp"
            android:text="@string/form_father_last_name"
            android:id="@+id/FormLabelFatherLastName"/>
        <EditText
            style="@style/Margin16"
            android:hint="@string/form_father_last_name"
            android:inputType="textPersonName"
            android:labelFor="@+id/FormLabelFatherLastName"
            android:id="@+id/FormInputFatherLastName"
            />
        <TextView
            style="@style/Margin16"
            android:labelFor="@+id/FormInputMotherLastName"
            android:layout_marginBottom="0dp"
            android:text="@string/form_mother_last_name"
            android:id="@+id/FormLabelMotherLastName"
            />
        <EditText
            style="@style/Margin16"
            android:hint="@string/form_mother_last_name"
            android:inputType="textPersonName"
            android:id="@+id/FormInputMotherLastName"
            tools:ignore="LabelFor" />

        <TextView
            style="@style/Margin16"
            android:layout_marginBottom="0dp"
            android:text="@string/form_gender"
            android:id="@+id/FormLabelGender"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/FormRadioGroupGender">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_radio_man"
                android:id="@+id/FormRadioMan"
                android:layout_marginStart="16dp"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_radio_woman"
                android:layout_marginStart="16dp"
                android:id="@+id/FormRadioWoman"
                />
        </RadioGroup>

        <TextView
            style="@style/Margin16"
            android:layout_marginBottom="0dp"
            android:text="@string/form_label_birthday"
            android:id="@+id/FormLabelBirthday"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                style="@style/MarginDate"
                android:id="@+id/FormInputBirthdayDay"
                android:inputType="date"
                android:minWidth="48dp"
                android:hint="@string/form_label_day"/>
            <EditText
                style="@style/MarginDate"
                android:id="@+id/FormInputBirthdayMonth"
                android:inputType="date"
                android:minWidth="48dp"
                android:hint="@string/form_label_month"/>
            <EditText
                style="@style/MarginDate"
                android:id="@+id/FormInputBirthdayYear"
                android:inputType="date"
                android:minWidth="48dp"
                android:hint="@string/form_label_year"/>
        </LinearLayout>

        <TextView
            style="@style/Margin16"
            android:layout_marginBottom="0dp"
            android:text="@string/form_label_states"
            android:labelFor="@+id/FormSpinnerState"
            android:id="@+id/FormLabelStates"/>
        <Spinner
            android:id="@+id/FormSpinnerState"
            style="@style/Margin16"
            android:layout_marginBottom="48dp"
            android:entries="@array/States"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getImageBtn"
            android:onClick="getImageFromGallery"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            style="@style/Margin16"
            android:background="@color/colorDarkGrey"
            android:id="@+id/ImageViewForm"/>

        <Button
            style="@style/FormButton"
            android:id="@+id/ButtonGenerateCURP"
            android:text="@string/form_button_generate_curp"
            android:background="@drawable/button_selector"
            android:textColor="@color/colorWhite"
            android:onClick="SaveCurpButton"/>


    </LinearLayout>

</ScrollView>