<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewCurpDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Margin16"
            android:text="@string/display_curp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            />
        <TextView
            style="@style/TextAccent"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:id="@+id/DisplayCURP"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="16dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            style="@style/Margin16"
            android:text="@string/form_name"
            />
        <TextView
            style="@style/TextAccent"
            android:id="@+id/DisplayName"/>
        <TextView
            style="@style/Margin16"
            android:text="@string/form_father_last_name"
            />
        <TextView
            style="@style/TextAccent"
            android:id="@+id/DisplayFatherLastName"/>
        <TextView
            style="@style/Margin16"
            android:text="@string/form_mother_last_name"
            />
        <TextView
            style="@style/TextAccent"
            android:id="@+id/DisplayMotherLastName"/>
        <TextView
            style="@style/Margin16"
            android:text="@string/form_gender"
            />
        <TextView
            style="@style/TextAccent"
            android:id="@+id/DisplayGender"/>
        <TextView
            style="@style/Margin16"
            android:text="@string/form_label_birthday"
            />
        <TextView
            style="@style/TextAccent"
            android:id="@+id/DisplayBirthday"/>
        <TextView
            style="@style/Margin16"
            android:text="@string/form_label_states"
            />
        <TextView
            style="@style/TextAccent"
            android:id="@+id/DisplayState"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginVertical="16dp"
            android:id="@+id/DisplayImage"/>


    </LinearLayout>

</ScrollView>